--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -27,13 +27,13 @@
         <div class="user_option_box">
           <a href="/login" class="account-link">
             {{#if user}}
-            <a href="/profile"><span>Hello {{user.user_email}}!</span></a> <a href="/logout">Logout</a>
+            <a class="user_id" value={{user.user_id}} href="/profile"><span>Hello {{user.user_email}}!</span></a> <a href="/logout">Logout</a>
             {{else}}
             <a href="/login"><i class="fa fa-user"></i> Login</a>
             {{/if}}
           </a>
           
-          <a href="/cart" class="nav-link">
+          <a href="/cart" class="nav-link " >
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span>
               Cart
