--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -394,11 +394,14 @@
     </div>
   </section>
   <!-- end client section -->
+
   {{> footer}}
   
   {{> script}}
   {{> addToCart}}
   {{> forFilter}}
+  {{> localStorageChange}}
+  
 </body>
 
 </html>
